add function to update toggle message and store value of state clicked on toggle

--- a/app/src/components/Homepage.css
+++ b/app/src/components/Homepage.css
@@ -85,9 +85,9 @@
   color: #ABAEB0;
 }
 
-.Homepage .Background .TextField {
+.Homepage .Background .Result {
   position: absolute;
-  left: 576px;
+  left: 612px;
   top: 556px;
   color: #3682C8;
 }
