--- a/app/src/components/Header.css
+++ b/app/src/components/Header.css
@@ -7,7 +7,7 @@
 ***********************************************************************/
 .Banner {
     text-align: center;
-    width: 1440px;
+    width: 100vw;
     height: 200px;
     background-color: #3682C8;
 }
