--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,3 +1,5 @@
+/*default index.css file from using create-react-app to create initial document hierarchy*/
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
